--- a/Bloggle/Views/AdminTags/List.cshtml
+++ b/Bloggle/Views/AdminTags/List.cshtml
@@ -17,6 +17,7 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>DisplayName</th>
+                <th> </th>
             </thead>
             <tbody>
                 @foreach (var tag in Model)
@@ -25,6 +26,11 @@
                         <td>@tag.Id</td>
                         <td>@tag.Name</td>
                         <td>@tag.DisplayName</td>
+                        <td>
+                            <a asp-area="" asp-controller="AdminTags"
+                            asp-action="Edit"
+                            asp-route-id="@tag.Id">Edit</a>
+                        </td>
                     </tr>
                 }
             </tbody>
