--- a/Bloggle/Views/AdminBlogPost/List.cshtml
+++ b/Bloggle/Views/AdminBlogPost/List.cshtml
@@ -17,6 +17,7 @@
             <td>Id</td>
             <td>Heading</td>
             <td>Tags</td>
+            <td></td>
            </tr>
         </thead>
         <tbody>
@@ -32,6 +33,12 @@
                                 <span class="badge bg-secondary me-1">@tag.Name</span>
                             }
                         </div>
+                    </td>
+                    <td>
+                        <a asp-area=""
+                        asp-action="Edit"
+                        asp-controller="AdminBlogPost"
+                        asp-route-id="@blogPost.Id">Edit</a>
                     </td>
                 </tr>
             }
