--- a/Bloggle/Views/AdminBlogPost/Edit.cshtml
+++ b/Bloggle/Views/AdminBlogPost/Edit.cshtml
@@ -62,7 +62,16 @@
                         asp-for="SelectedTag"></select>
             </div>
             <div class="mb-3">
-                <button type="submit" class="btn btn-dark">Update</button>
+                <div class="d-flex">
+                    <button type="submit" class="btn btn-dark">Update</button>
+
+                    <button class="btn btn-danger ms-2" type="submit"
+                            asp-area=""
+                            asp-controller="AdminBlogPost"
+                            asp-action="Delete">
+                        Delete
+                    </button>
+                </div>
             </div>
        </form>
     }
