--- a/Bloggle/Views/AdminBlogPost/List.cshtml
+++ b/Bloggle/Views/AdminBlogPost/List.cshtml
@@ -20,6 +20,7 @@
                     <td>Id</td>
                     <td>Heading</td>
                     <td>Tags</td>
+                   @*  <td>Image</td> *@
                     <td></td>
                 </tr>
             </thead>
@@ -37,6 +38,9 @@
                                 }
                             </div>
                         </td>
+                       @*  <td>
+                            <img src="@blogPost.FeaturedImageUrl"  width:100px" />
+                        </td> *@
                         <td>
                             <a asp-area=""
                                asp-action="Edit"
